# Olve.Utilities

./: .cz.yaml  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  LICENSE  Olve.Paths.slnf  Olve.Utilities.sln  Olve.Utilities.sln.DotSettings  Olve.Utilities.slnx  Olve.sln  README.md  codedog.yml
.claude-plugin/: marketplace.json
.config/: dotnet-tools.json
.github/workflows/: CI.yml  ci-Olive.SG.CopyProperties.yml  ci-Olve.Utilities.yml  ci-olve_sg_copy-properties.yml  ci-olve_utilities.yml  ci.yml  codedog-review.yml  continuous-integration.yml  olve-operations_publish.yml  pr_to_develop.yml  pr_to_master.yml  push_master.yml
Olve.Operations/: IAsyncOperation`1.cs  IAsyncOperation`2.cs  IOperation`1.cs  IOperation`2.cs  Olve.Operations.csproj  README.md
docs/: docfx.json  index.md  toc.yml
docs/versioning/: index.md
olve-packages/.claude-plugin/: plugin.json
scripts/: pyproject.toml
scripts/src/constants/: __init__.py
scripts/src/gcm/: gcm.py
scripts/src/version/: lib.py
src/Olve.Logging/: GetLogsRequest.cs  GetLogsResponse.cs  GetLogsValidator.cs  ILoggingManager.cs  InMemoryLoggingManager.cs  LogLevel.cs  LogLevelExtensions.cs  LogMessage.cs  LogsUpdatedEvent.cs  Olve.Logging.csproj  README.md  ResultProblemExtensions.cs
src/Olve.MinimalApi/: IHandler`1.cs  IHandler`2.cs  Olve.MinimalApi.csproj  PathJsonConverter.cs  README.md  ResultMappingExtensions.cs  ServiceExtensions.cs  ValidationAPIExtensions.cs
src/Olve.OpenRaster/: ILayerParser.cs  Olve.OpenRaster.csproj  (+1 more)
(+397 files in other folders)
